Removed column 'usuario_id' from table 'busqueda' to implement a search history properly
- Added user_busqueda table
